--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-tensorflow
-ccxt
-pandas
-numpy
-scikit-learn
-plotly
+streamlit==1.28.0
+tensorflow-cpu==2.14.0
+ccxt==4.1.0
+pandas==2.1.0
+numpy==1.24.3
+scikit-learn==1.3.0
+plotly==5.17.0
